fix general grid

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -52,61 +52,51 @@
 										{% endcache %}
 									</div>
 								</div>
-										<div class="col-12 col-lg-4">
-													<div class="col-12">
-														<div class="leftCol__item">
-															<div class="articleListSmall articleListSmall--latestNews marginBottom30">
-																<h3 class="sectionHeading">Latest news</h3>
-																{% gimmelist article from articles|start(0)|limit(6)|order('publishedAt','desc')  %}
-																{% include 'partials/articleListSmall__item.html.twig'  %}
-																{% endgimmelist %}
-															</div>
-														</div>
-
-														{% container 'frontLeftSidebar' %}
-														<div class="ad marginBottom30 hidden-xs">
-															<img src="{{ asset('theme/img/article_img/ad.png') }}">
-														</div>
-														{% endcontainer %}
-
-													</div>
-													{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
-
-													<div class="subscribe subscribe--banner marginBottom30">
-														<h3 class="subscribe__headline">Subscribe</h3>
-														<a href="#" class="subscribe__image"><img
-																src="{{ asset('theme/img/subscribe.png') }}" alt=""></a>
-														<p class="subscribe__text">Your subscription helps support independent
-															investigative journalism</p>
-														<a href="#" class="button button--color">Subscribe</a>
-													</div>
-
-													{% if themeSetting('sidebar_switch') %}
-													{% include 'partials/featured-author.html.twig'  %}
-													{% endif %}
-
-													{% container 'frontSidebar' %}
-
-													<div class="ad hidden-xs marginTop30 marginBottom30">
-														<img src="{{ asset('theme/img/article_img/ad.png') }}">
-													</div>
-
-													<div class="marginTop30 marginBottom30">
-														{% include 'elements/facebook.html.twig' %}
-													</div>
-
-													{% include 'elements/selectedComment.html.twig' with {'class' : 'marginTop30 marginBottom30'} %}
-
-													{% endcontainer %}
-											</div>
+							</div>
+							<div class="col-12 col-lg-4">
+								<div class="col-12">
+									<div class="leftCol__item">
+										<div class="articleListSmall articleListSmall--latestNews marginBottom30">
+											<h3 class="sectionHeading">Latest news</h3>
+											{% gimmelist article from articles|start(0)|limit(6)|order('publishedAt','desc')  %}
+											{% include 'partials/articleListSmall__item.html.twig'  %}
+											{% endgimmelist %}
+										</div>
+									</div>
+									{% container 'frontLeftSidebar' %}
+									<div class="ad marginBottom30 hidden-xs">
+										<img src="{{ asset('theme/img/article_img/ad.png') }}">
+									</div>
+									{% endcontainer %}
 								</div>
-
+								{% include 'elements/most.html.twig' with {'class' : 'marginBottom30'} %}
+								<div class="subscribe subscribe--banner marginBottom30">
+									<h3 class="subscribe__headline">Subscribe</h3>
+									<a href="#" class="subscribe__image"><img
+											src="{{ asset('theme/img/subscribe.png') }}" alt=""></a>
+									<p class="subscribe__text">Your subscription helps support independent
+										investigative journalism</p>
+									<a href="#" class="button button--color">Subscribe</a>
+								</div>
+								{% if themeSetting('sidebar_switch') %}
+								{% include 'partials/featured-author.html.twig'  %}
+								{% endif %}
+								{% container 'frontSidebar' %}
+								<div class="ad hidden-xs marginTop30 marginBottom30">
+									<img src="{{ asset('theme/img/article_img/ad.png') }}">
+								</div>
+								<div class="marginTop30 marginBottom30">
+									{% include 'elements/facebook.html.twig' %}
+								</div>
+								{% include 'elements/selectedComment.html.twig' with {'class' : 'marginTop30 marginBottom30'} %}
+								{% endcontainer %}
+							</div>
+						</div>
 						<div class="row">
 							<div class="col-12">
 								<div class="row">
 									<div class="col-12">
-										<h3 class="sectionHeadingBold marginTop30"><a
-												href="{{ url('/kochen-backen') }}">Kochen &amp; Backen</a>
+										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('/kochen-backen') }}">Kochen &amp; Backen</a>
 										</h3>
 									</div>
 									<div class="articleGrid row d-flex">
@@ -115,8 +105,6 @@
 										{% endgimmelist %}
 									</div>
 								</div>
-
-
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a
@@ -135,12 +123,9 @@
 										</div>
 									</div>
 								</div>
-
-
 								<div class="row">
 									<div class="col-12">
-										<h3 class="sectionHeadingBold marginTop30"><a
-												href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
+										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
 									</div>
 									<div class="articleGrid row">
 										{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/diaet-ernaehrung'}  %}
@@ -152,8 +137,6 @@
 										{% endgimmelist %}
 									</div>
 								</div>
-
-
 								{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/gesundheit'}  %}
 								{% set rend1250 = "/public/img/article_img/1250x600.png" %}
 								{% gimmelist media from articleMedia|limit(1) with {'article': article} %}
@@ -182,7 +165,6 @@
 									</div>
 								</div>
 								{% endgimmelist %}
-
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('sports') }}">Mode
@@ -202,8 +184,7 @@
 										</div>
 									</div>
 								</div>
-								
-								</div>
 							</div>
+						</div>
 </main>
 {% endblock %}
