--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -141,35 +141,22 @@
 										</div>
 									</div>
 								</div>
-								{% gimmelist article from articles|start(0)|limit(3)|order('publishedAt','desc') with {'route': '/gesundheit'}  %}
-								{% set rend1250 = "/public/img/article_img/1250x600.png" %}
-								{% gimmelist media from articleMedia|limit(3) with {'article': article} %}
-								{% set imgCaption = media.body %}
-								{% if media.renditions is iterable %}
-								{% for rendition in media.renditions %}
-								{% if rendition.name == '1250x600' %}
-								{% set rend1250 = path(rendition) %}
-								{% endif %}
-								{% endfor %}
-								{% endif %}
-								{% endgimmelist %}
-								<div class="row">
-									<div class="gallery marginTop30 marginBottom30 col-12">
-										<figure class="gallery__image">
-											<a class="gallery__strip" href="{{ path('gesundheit') }}">Gesundheit</a>
-											<a href="{{ path(article) }}">
-												<img src="{{ rend1250 }}" alt="{{ imgCaption|striptags }}">
-											</a>
-										</figure>
-										<div class="gallery__text">
-											<h3 class="gallery__headline"><a
-													href="{{ path(article) }}">{{ article.title }}</a></h3>
-											<p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
+							<div class="row">
+								<div class="col-12">
+									<div class="row">
+										<div class="col-12">
+											<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('//gesundheit') }}">/gesundheit</a>
+											</h3>
+										</div>
+										<div class="col-12">
+											<div class="articleGrid row d-flex">
+												{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '//gesundheit'}  %}
+												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-12 col-md-6 col-lg-3'} %}
+												{% endgimmelist %}
+											</div>
 										</div>
 									</div>
-								</div>
-								{% endgimmelist %}
-								<div class="row">
+							<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('sports') }}">Mode
 												&amp; schoenheit</a>
