--- a/public/css/elements/mainArticleList.sass
+++ b/public/css/elements/mainArticleList.sass
@@ -4,6 +4,8 @@
   margin-bottom: 20px
   border-bottom: 1px dotted #cccccc
   padding-bottom: 20px
+  figure
+    overflow: hidden
   +sm
     margin-bottom: 30px
     border-bottom: none
