--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -164,6 +164,7 @@
         </div>
 
         {% block logo %}
+        {% dump %}
         <div class="verticalMiddle verticalMiddle col-2 offset-2">
           <a class="header__logo" href="/"><img src="{{ themeLogo(asset('/public/img/logo.png')) }}"></a>
         </div>
