--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -145,7 +145,7 @@
 								<div class="col-12">
 									<div class="row">
 										<div class="col-12">
-											<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('/gesundheit') }}">/Gesundheit</a>
+											<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('/gesundheit') }}">Gesundheit</a>
 											</h3>
 										</div>
 										<div class="col-12">
