--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -165,7 +165,7 @@
       
         {% block logo %}
         <div class="verticalMiddle verticalMiddle col-2 offset-2">
-          {#<a class="header__logo" href="/"><img src="{{ themeLogo(asset('/public/img/logo.png')) }}"></a> #}
+          <a class="header__logo" href="/"><img src="{{ themeLogo(asset('/public/img/logo.png')) }}"></a>
         </div>
         {% endblock %}
 
