--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -47,6 +47,8 @@
     &--section
       max-width: 170px
       margin: 0 auto !important
+      a
+        width: 50px;
   .header__sectionName
     font-family: $fontSerif
     font-size: 4rem
