--- a/public/css/elements/header.sass
+++ b/public/css/elements/header.sass
@@ -47,7 +47,7 @@
     &--section
       max-width: 170px
       margin: 0 auto !important
-      a
+      img
         width: 50px;
   .header__sectionName
     font-family: $fontSerif
