--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -96,7 +96,8 @@
 							<div class="col-12">
 								<div class="row">
 									<div class="col-12">
-										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('kochen-backen') }}">Kochen &amp; Backen</a>
+										<h3 class="sectionHeadingBold marginTop30">
+										<a href="{{ url('kochen-backen') }}">Kochen &amp; Backen</a>
 										</h3>
 									</div>
 									<div class="col-12">
