--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% dump %}
 {% block body %}
 <main class="container">
 	{% if themeSetting('breakingNews_switch') %}
