--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -1,5 +1,4 @@
 {% extends 'base.html.twig' %}
-{% dump %}
 {% block body %}
 <main class="container">
 	{% if themeSetting('breakingNews_switch') %}
@@ -147,7 +146,7 @@
 								<div class="col-12">
 									<div class="row">
 										<div class="col-12">
-											<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('politics') }}">Gesundheit</a>
+											<h3 class="sectionHeadingBold marginTop30"><a href="{{ path('politics') }}">Gesundheit</a>
 											</h3>
 										</div>
 										<div class="col-12">
