--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -146,7 +146,17 @@
 								<div class="col-12">
 									<div class="row">
 										<div class="col-12">
-											<h3 class="sectionHeadingBold marginTop30"><a href="{{ path('gesundheit') }}">Gesundheit</a>
+											<h3 class="sectionHeadingBold marginTop30">
+												<a href="{{ path('politics') }}">Gesundheit</a>
+											</h3>
+											<h3 class="sectionHeadingBold marginTop30">
+												<a href="{{ path('/politics') }}">Gesundheit1</a>
+											</h3>
+											<h3 class="sectionHeadingBold marginTop30">
+												<a href="{{ url('politics') }}">Gesundheit2</a>
+											</h3>
+											<h3 class="sectionHeadingBold marginTop30">
+												<a href="{{ url('/politics') }}">Gesundheit3</a>
 											</h3>
 										</div>
 										<div class="col-12">
