--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -161,7 +161,7 @@
 										</div>
 										<div class="col-12">
 											<div class="articleGrid row d-flex">
-												{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/politics'}  %}
+												{% gimmelist article from articles|start(0)|limit(4)|order('publishedAt','desc') with {'route': '/gesundheit'}  %}
 												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'col-12 col-md-6 col-lg-3'} %}
 												{% endgimmelist %}
 											</div>		
