--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -147,16 +147,7 @@
 									<div class="row">
 										<div class="col-12">
 											<h3 class="sectionHeadingBold marginTop30">
-												<a href="{{ path('politics') }}">Gesundheit</a>
-											</h3>
-											<h3 class="sectionHeadingBold marginTop30">
-												<a href="{{ path('/politics') }}">Gesundheit1</a>
-											</h3>
-											<h3 class="sectionHeadingBold marginTop30">
-												<a href="{{ url('politics') }}">Gesundheit2</a>
-											</h3>
-											<h3 class="sectionHeadingBold marginTop30">
-												<a href="{{ url('/politics') }}">Gesundheit3</a>
+												<a href="/gesundheit">Gesundheit</a>
 											</h3>
 										</div>
 										<div class="col-12">
