--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -96,7 +96,7 @@
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30">
-										<a href="{{ url('kochen-backen') }}">Kochen &amp; Backen</a>
+										<a href="/kochen-backen">Kochen &amp; Backen</a>
 										</h3>
 									</div>
 									<div class="col-12">
@@ -110,7 +110,7 @@
 =								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a
-												href="{{ url('spass-unterhaltung/spiele') }}">Spiele</a></h3>
+												href='/spass-unterhaltung/spiele') }}">Spiele</a></h3>
 										<div class="row">
 										
 											<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
@@ -128,7 +128,7 @@
 								</div>
 								<div class="row">
 									<div class="col-12">
-										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('diaet-ernaehrung') }}"> DIÄT </a></h3>
+										<h3 class="sectionHeadingBold marginTop30"><a href='/diaet-ernaehrung'> DIÄT </a></h3>
 									</div>
 									<div class="col-12">
 										<div class="articleGrid row">
@@ -160,8 +160,7 @@
 									</div>
 							<div class="row">
 									<div class="col-12">
-										<h3 class="sectionHeadingBold marginTop30"><a href="{{ url('sports') }}">Mode
-												&amp; schoenheit</a>
+										<h3 class="sectionHeadingBold marginTop30"><a href='/mode-schoenheit'>Mode &amp; Schönheit</a>
 										</h3>
 										<div class="row">
 											<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
