--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -107,7 +107,7 @@
 										</div>
 									</div>
 								</div>
-=								<div class="row">
+								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a
 												href='/spass-unterhaltung/spiele') }}">Spiele</a></h3>
