--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -110,9 +110,8 @@
 								<div class="row">
 									<div class="col-12">
 										<h3 class="sectionHeadingBold marginTop30"><a
-												href='/spass-unterhaltung/spiele') }}">Spiele</a></h3>
+												href='/spass-unterhaltung/spiele') }}>Spiele</a></h3>
 										<div class="row">
-										
 											<div class="articleGrid col-md-6 col-sm-6 col-xs-12">
 												{% gimmelist article from articles|start(0)|limit(1)|order('publishedAt','desc') with {'route': '/spass-unterhaltung/spiele'}  %}
 												{% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--fourColumns'} %}
