--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -1,6 +1,6 @@
 {% cache 'mainArtSection'~class {gen: article} %}
 
-<article class="mainArticle mainArticle--section row {{class}}">
+<article class="mainArticleList {{class}}">
 
   {% set articleKicker = null %}
   {% for keyword in article.keywords %}
