--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -18,21 +18,9 @@
             <div class="mainArticle__teaser">
               <p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
             </div>
-          
-            <div class="articleMetadata">
-              {% if article.authors %}
-                {% for author in article.authors %}
-                <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
-                {% endfor %}
-              {% elseif article.metadata.byline %}
-              <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
-              {% endif %}
-              <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
-              <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
-            </div>
-          </div>
+        
 
-          <figure class="col-12 {% if image =='small' %}mainArticle__image--small{% endif %} ">
+          <figure class="mainArticleList__image{% if image =='small' %}mainArticle__image--small{% endif %} ">
             {% if article.featureMedia %}
               {% gimme rendition with { 'media': article.featureMedia, 'name': '610x380', 'fallback': 'original' } %}
                 {% set rend610 = path(rendition) %}
@@ -52,6 +40,19 @@
                 {% endgimme %}
               {% endgimmelist %}
             {% endif %}              
+
+            <div class="articleMetadata">
+              {% if article.authors %}
+                {% for author in article.authors %}
+                <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
+                {% endfor %}
+              {% elseif article.metadata.byline %}
+              <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
+              {% endif %}
+              <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
+              <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
+            </div>
+          </div>
 
             <a href="{{ url(article) }}">
               {% if image=='small' %}
