--- a/views/partials/mainArticleSection.html.twig
+++ b/views/partials/mainArticleSection.html.twig
@@ -47,12 +47,8 @@
             <h2 class="mainArticleList__headline "><a href="{{ url(article) }}">
               {{ article.title }}
             </a></h2>
-            
-            <div class="mainArticle__teaser">
-              <p>{{ article.lead|striptags|safeTruncate(200,"...") }}</p>
-            </div>
           
-            <div class="articleMetadata">
+            <div class="articleMetadata d-none d-md-flex">
               {% if article.authors %}
                 {% for author in article.authors %}
                 <span class="articleMetadata__byline">by <a href="{{ url('Authors', { 'authorSlug' : author.slug }) }}">{{ author.name }}</a></span>
@@ -60,7 +56,6 @@
               {% elseif article.metadata.byline %}
               <span class="articleMetadata__byline">by <a href="#">{{ article.metadata.byline }}</a></span>
               {% endif %}
-              <a class="articleMetadata__shares articleMetadata__info" href="#">240</a>
               <a class="articleMetadata__comments articleMetadata__info" href="#">20</a>
             </div>
           </div>
