--- a/public/css/elements/mainArticleList.sass
+++ b/public/css/elements/mainArticleList.sass
@@ -51,18 +51,18 @@
       bottom: 30px
       max-width: 690px
       text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5)
-      
+
   .mainArticleList__kicker
     font-size: 1.4rem;
     font-weight: 900;
     color: #ea545f;
     display: none;
     margin-top: 20px;
-    @media (min-width: 768px) {
+    @media (min-width: 768px)
         display: block;
         color: #fff;
         margin-top: 0;
-    }
+
   .mainArticleList__headline
     @include letterSpacing()
     font-size: 2.8rem
