--- a/public/css/elements/mainArticleList.sass
+++ b/public/css/elements/mainArticleList.sass
@@ -20,12 +20,7 @@
     height: 0px
     margin: 0px -15px
     +sm
-      padding-bottom: 48.4%
       margin: 0px
-    &--small
-      padding-bottom: 65.1%
-      +sm
-        padding-bottom: 62.3%
     img
       width: 100%
       height: auto
@@ -58,7 +53,7 @@
     color: #ea545f;
     display: none;
     margin-top: 20px;
-    @media (min-width: 768px)
+    @media only screen and (min-width: 768px)
         display: block;
         color: #fff;
         margin-top: 0;
