--- a/public/css/elements/articleMetadata.sass
+++ b/public/css/elements/articleMetadata.sass
@@ -13,7 +13,7 @@
       &:hover
         border-bottom: 1px solid #00a9e1
   .articleMetadata__info
-    color: #929292
+    color: #fff
     margin: 0px 10px
     position: relative
     &--white
