--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -33,7 +33,7 @@
           {% include 'partials/mainArticleSection.html.twig' with {'class' : ''} %}
 
           <div class="row">
-            <div class="col-md-12 col-sm-12 col-xs-12 pull-right">
+            <div class="col-12">
               <div class="articleGrid row">
             
           {% else %}
@@ -46,7 +46,7 @@
 
           {% endif %}
 
-          {% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item--threeColumns col-md-4 col-sm-6 col-xs-12'} %}
+          {% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item col-12 col-sm-3'} %}
 
           {% endif %}
           
