--- a/public/css/elements/mainArticleList.sass
+++ b/public/css/elements/mainArticleList.sass
@@ -15,11 +15,10 @@
     +sm
       color: $colorWhite
   .mainArticleList__image
-    z-index: 1
-    height: 0px
-    margin: 0px -15px
-    +sm
-      margin: 0px
+    z-index: 1;
+    margin: 0 -15px;
+      @media only screen and (min-width: 768px)
+        margin: 0px
     img
       width: 100%
       height: auto
