--- a/public/css/elements/mainArticleList.sass
+++ b/public/css/elements/mainArticleList.sass
@@ -16,9 +16,9 @@
       color: $colorWhite
   .mainArticleList__image
     z-index: 1;
-    margin: 0 -15px;
-      @media only screen and (min-width: 768px)
-        margin: 0px
+    margin: 0 -15px
+    @media only screen and (min-width: 768px)
+      margin: 0px
     img
       width: 100%
       height: auto
