--- a/public/css/elements/_default.sass
+++ b/public/css/elements/_default.sass
@@ -23,6 +23,7 @@ body
   color: $colorDark
   padding-top: 0px
   overflow: auto !important
+  background: rgba(253, 232, 232, 0.58)
 
 h1,h2,h3,h4,h5,h6
   font-family: $fontRegular
