--- a/public/css/elements/footer.sass
+++ b/public/css/elements/footer.sass
@@ -4,11 +4,14 @@
   padding: 20px 0px
   +sm
     padding: 50px 0px
+  .container
+    background: $colorDark
   a, p
     color: #dfdfdf
   .footer__logo
     img
-      max-width: 221px
+      max-width: 110px;
+      margin-bottom: 10px;
   .footer__section
     margin: 20px 0px
     ul
