--- a/views/partials/articleGrid__item.html.twig
+++ b/views/partials/articleGrid__item.html.twig
@@ -14,7 +14,7 @@
   {% endgimmelist %}
 {% endif %}
 
-<article class="articleGrid__item col-12 col-md-3">
+<article class="articleGrid__item {{ class }}">
   <a class="articleGrid__image articleGrid__image--smallMobile" href="{{ url(article) }}">
     <figure>
       <img src="{{ rend610 }}" alt="{{ imgCaption }}" />
