--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -46,7 +46,7 @@
 
           {% endif %}
 
-          {% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item col-12 col-sm-3'} %}
+          {% include 'partials/articleGrid__item.html.twig' with {'class' : 'articleGrid__item col-12 col-md-3'} %}
 
           {% endif %}
           
