--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -230,18 +230,19 @@
     <div class="row">
         <div class="footer__logo col-12 col-sm-2">
           <a href='/'><img src="{{ themeLogo(asset('/public/img/logo-white.png')) }}"></a>
-          <div class="socialMedia my-3">{# Social Media Links here#}</div>
         </div>
         <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
         {% container 'footerNav' %}
           <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
         {% endcontainer %}
         </div>
+        <div class="socialMedia col-12">{# Social Media Links here#}</div>
         <div class="footer_bottom">
           <div class="container">
             <div class="row">
               <nav class="staticNav col-12 col-sm-8" role="navigation">
                 {#Important Nav Links#}
+                {% dump %}
               </nav>
             </div>
           </div>
