--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -226,7 +226,7 @@
 <!-- Footer -->
 
 <footer class="footer">
-                {% dump %}
+                {% dump menus %}
   <div class="container">
     <div class="row">
         <div class="footer__logo col-12 col-sm-2">
