--- a/views/article.html.twig
+++ b/views/article.html.twig
@@ -97,7 +97,7 @@
 				{% endif %}
 				{% endfor %}
 
-				{% include 'partials/slideshow.html.twig' %}
+				{# {% include 'partials/slideshow.html.twig' %} #}
 
 			<div id="disqus_thread"></div>
 
