--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -1,5 +1,8 @@
 {% extends 'knp_menu.html.twig' %}
 
+{% debug list %}
+
+
 {% block list %}
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
