--- a/views/widgets/footerPrim.html.twig
+++ b/views/widgets/footerPrim.html.twig
@@ -1,9 +1,8 @@
 {% extends 'knp_menu.html.twig' %}
 
-{% dump list %}
-
-
 {% block list %}
+    {% dump item %}
+
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
       <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
