--- a/views/widgets/menu2.html.twig
+++ b/views/widgets/menu2.html.twig
@@ -1,1 +1,2 @@
 {{ knp_menu_render('footerPrim',{'template':'widgets/footerPrim.html.twig'}) }}
+{{ knp_menu_render('footerSec',{'template':'widgets/footerSec.html.twig'}) }}
