--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558956692759' %}
+{% set version = '1558957337456' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -235,6 +235,10 @@
         {% container 'footerNav' %}
           <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
         {% endcontainer %}
+
+          {% container 'footerNavSec' %}
+            <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
+          {% endcontainer %}
         </div>
         <div class="socialMedia col-12">{# Social Media Links here#}</div>
         <div class="footer_bottom">
