--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -2,6 +2,8 @@
 
 {% block list %}
 
+    {% dump list %}
+
     {% if item.hasChildren and options.depth is not same as(0) and item.displayChildren %}
         {% import _self as knp_menu %}
         <div class="footer__section col-sm-4 col-md-4 col-xs-12 hidden-xs">
