--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558958130134' %}
+{% set version = '1558958335368' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -235,6 +235,7 @@
         {% container 'footerNav' %}
           <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
         {% endcontainer %}
+          <h1>test</h1>
 
           {% container 'footerNavSec' %}
             <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
