--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558958594860' %}
+{% set version = '1558958691351' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -232,7 +232,10 @@
           <a href='/'><img src="{{ themeLogo(asset('/public/img/logo-white.png')) }}"></a>
         </div>
         <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
-      
+
+          {% container 'footerNav' %}
+            <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
+          {% endcontainer %}
 
           {% container 'footerNavSec' %}
             <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
