--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558958691351' %}
+{% set version = '1558958902982' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -225,6 +225,9 @@
 
 <!-- Footer -->
 
+  {% container 'footerNavSec' %}
+    <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
+  {% endcontainer %}
 <footer class="footer">
   <div class="container">
     <div class="row">
