--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558959919076' %}
+{% set version = '1558960010615' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -224,6 +224,7 @@
 {% block body %}{% endblock %}
 
 <!-- Footer -->
+  <h1>test</h1>
 
   {% container 'footerNavSec' %}
     <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
