--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558960010615' %}
+{% set version = '1558960250410' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -224,7 +224,6 @@
 {% block body %}{% endblock %}
 
 <!-- Footer -->
-  <h1>test</h1>
 
   {% container 'footerNavSec' %}
     <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
@@ -237,7 +236,7 @@
         </div>
         <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
-          {% container 'footerNav' %}
+          {% container 'footerNavv' %}
             <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
           {% endcontainer %}
 
