--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558960250410' %}
+{% set version = '1558960397275' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -226,7 +226,7 @@
 <!-- Footer -->
 
   {% container 'footerNavSec' %}
-    <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
+    <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu3.html.twig -->
   {% endcontainer %}
 <footer class="footer">
   <div class="container">
@@ -236,13 +236,11 @@
         </div>
         <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
-          {% container 'footerNavv' %}
+          {% container 'footerNav' %}
             <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
           {% endcontainer %}
 
-          {% container 'footerNavSec' %}
-            <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
-          {% endcontainer %}
+        {% dump 'footerNavSec' %}
         </div>
         <div class="socialMedia col-12">{# Social Media Links here#}</div>
         <div class="footer_bottom">
