--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558960397275' %}
+{% set version = '1558960710732' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -236,7 +236,7 @@
         </div>
         <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
-          {% container 'footerNav' %}
+          {% container 'footerNavSec' %}
             <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
           {% endcontainer %}
 
