--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558960710732' %}
+{% set version = '1558960755997' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -236,11 +236,10 @@
         </div>
         <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
 
-          {% container 'footerNavSec' %}
+          {% container 'footerNav' %}
             <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu2.html.twig -->
           {% endcontainer %}
 
-        {% dump 'footerNavSec' %}
         </div>
         <div class="socialMedia col-12">{# Social Media Links here#}</div>
         <div class="footer_bottom">
