--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558960755997' %}
+{% set version = '1558960829586' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -224,6 +224,7 @@
 {% block body %}{% endblock %}
 
 <!-- Footer -->
+  {% dump widgets %}
 
   {% container 'footerNavSec' %}
     <!-- Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu3.html.twig -->
