--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -1,4 +1,4 @@
-{% set version = '1558960829586' %}
+{% set version = '1558960952610' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -184,6 +184,7 @@
     </div>
 
   </header>
+  {% dump container %}
 
 {% container 'mainNav' %}
   {#Content of this container is defined by menu widget which is linked to it. Template used for this menu is widgets/menu1.html.twig  #}
