--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,10 +1,3 @@
-{% gimmelist footerPrim from navigation %}
-
-{% dump footerPrim %}
-
-
-
-    <h4 class="accordion__sectionHeadline"><a href="{{ url(footerPrim) }}">{{ footerPrim }}</a></h4>
-
-
-{% endgimmelist %}
+<ul>
+    {% gimmelist route from routes %} <li>{{ route.name }}
+        {% endgimme %} </ul>
