--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,3 +1,6 @@
 <ul>
     {% gimmelist route from routes %} <li>{{ route.name }}
-        {% endgimme %} </ul>
+    </li>
+        {% endgimme %}
+
+</ul>
