--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,5 +1,5 @@
 <ul>
-    {% gimmelist route from routes %} <li>{{ route.name }}
+    {% gimmelist route from routes %} <li>{{ route }}
     </li>
         {% endgimme %}
 
