--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,5 +1,5 @@
 <ul>
-    {% gimmelist route from routes %} <li>{{ route }}
+    {% gimmelist mainNavigation2 from routes %} <li>{{ mainNavigation2.name }}
     </li>
         {% endgimme %}
 
