--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,6 +1,9 @@
 <ul>
-    {% gimmelist mainNavigation2 from routes %} <li>{{ mainNavigation2.name }}
-    </li>
+    {% gimmelist mainNavigation2 from routes %}
+
+    {% dump mainNavigation2 %}
+
+
         {% endgimme %}
 
 </ul>
