--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -5,7 +5,7 @@
     {% endgimme %} </ul>
 
 <ul>
-    {% gimme contentList with { contentListName: "List1" } %}
+    {% gimme contentList with { contentListName: "mainNavigation2" } %}
         <li>{{ contentList.name }}</li> <!-- Content list name -->
         <li>{{ contentList.description }}</li> <!-- Content list description --> <li>{{ contentList.type }}</li> <!-- Content list type) -->
     {% endgimme %} </ul>
