--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,5 +1,5 @@
 <ul>
-    {% gimmelist route from routes with {  slug: 'agbs'} %} <li>{{ route.name }}</li> <!-- Route's name -->
+    {% gimmelist route with {  slug: 'agbs'} %} <li>{{ route.name }}</li> <!-- Route's name -->
         <li>{{ route.slug }}</li> <!-- Route's slug -->
         <li>{{ url(route) }}</li> <!-- Route's url -->
     {% endgimme %} </ul>
@@ -9,3 +9,15 @@
         <li>{{ contentList.name }}</li> <!-- Content list name -->
         <li>{{ contentList.description }}</li> <!-- Content list description --> <li>{{ contentList.type }}</li> <!-- Content list type) -->
     {% endgimme %} </ul>
+
+<ul>
+    {% gimmelist item from contentListItems with { contentListName: "mainNavigation2" } %} <li>{{ item.content.title }}</li> <!-- Article title -->
+
+
+    <ul>
+        {% gimmelist item from contentListItems with { contentListName: "footerprim" } %} <li>{{ item.content.title }}</li> <!-- Article title -->
+
+
+
+        <ul>
+            {% gimmelist item from contentListItems with { contentListName: "footerPrim" } %} <li>{{ item.content.title }}</li> <!-- Article title -->
