--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,7 +1,7 @@
+<ul>
+    {% gimmelist route from routes %}
+    <li>{{ route.name }}
+    </li>
+    {% endgimme %}
 
-
-            {% gimmelist item from contentListItems with { contentListName: "footerPrim" } %}
-
-            {% dump item %}
-
-            {% endgimmelist %}
+</ul>
