--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,5 +1,5 @@
 <ul>
-    {% gimmelist route from routes %}
+    {% gimmelist route from mainNavigation2 %}
     {% dump route %}
     {% endgimme %}
 
