--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -2,6 +2,6 @@
 
 
 <ul>
-    {% gimmelist item from routes with { parent: "Agbs" } %} <li>{{ item.name }}</li> <!-- Article title -->
+    {% gimmelist item from contentListItems with { parent: "Agbs" } %} <li>{{ item.name }}</li> <!-- Article title -->
 
 </ul>
