--- a/views/widgets/footerSec.html.twig
+++ b/views/widgets/footerSec.html.twig
@@ -1,7 +1,25 @@
+<div class="row">
+    <div class="footer__logo col-12 col-sm-2">
+        <a href='/'><img src="{{ themeLogo(asset('/public/img/logo-white.png')) }}"></a>
+    </div>
+    <div class="categoryItems col-12 col-sm-10 d-none d-sm-block">
+
+       footer contents
+
+    </div>
+    <div class="socialMedia col-12">{# Social Media Links here#}</div>
+    <div class="footer_bottom">
+        <div class="container">
+            <div class="row">
+                <nav class="staticNav col-12 col-sm-8" role="navigation">
+                    {#Important Nav Links#}
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-
-<ul>
-    {% gimmelist item from contentListItems with { parent: "Agbs" } %} <li>{{ item.name }}</li> <!-- Article title -->
-
-</ul>
+{#<ul>#}
+{#    {% gimmelist item from contentListItems with { parent: "Agbs" } %} <li>{{ item.name }}</li> <!-- Article title -->#}
+{#</ul>#}
